# Esp32RemoteAgent

./: .gitignore  LICENSE  README.md
Code/: README.md
Code/ESP-IDF/Esp32RemoteAgent/: .cproject  .project  CMakeLists.txt  README.md  flash-firmware.ps1  sdkconfig.defaults
Code/ESP-IDF/Esp32RemoteAgent/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  relay_client.c  relay_client.h  relay_protocol.c  relay_protocol.h  remote_config.c  remote_config.h  status_led.c  status_led.h  tcp_utils.c  tcp_utils.h  tunnel.c  tunnel.h  usb_net.c  usb_net.h  wifi_client.c  wifi_client.h
Code/RelayServer/: Program.cs  README.md  RelayServer.csproj  RelayServer.sln  appsettings.json  publish-start.ps1  stop-server.ps1
Code/RelayServer/ClientApp/: index.html  package-lock.json  package.json  vite.config.js
Code/RelayServer/Data/: AuthRepository.cs  BoardRepository.cs  EventRepository.cs  PublicPortRepository.cs  RelayDbContext.cs
Code/RelayServer/Endpoints/: AuthEndpoints.cs  BoardEndpoints.cs  EventEndpoints.cs  PublicPortEndpoints.cs
Code/RelayServer/Models/: AuthRequests.cs  BoardDto.cs  BoardRecord.cs  BoardRequests.cs  BoardServiceRecord.cs  BoardTelemetry.cs  DiagnosticDto.cs  PublicPortModels.cs  RelayEvent.cs  UserRecord.cs
Code/RelayServer/Options/: AdminOptions.cs  DatabaseOptions.cs  RelayOptions.cs
Code/RelayServer/Properties/: launchSettings.json
Code/RelayServer/Relay/: RelayFrame.cs  (+6 more)
Code/TerminalRelayAgent/: Program.cs  README.md  appsettings.json  publish-start.ps1  stop-agent.ps1
docs/: AI_DEVELOPMENT_GUIDE.md  CONTEXT_SUMMARY.md
(+36 files in other folders)
